fix Solve more layout issues on WebKit

--- a/themes/quasar/source/css/page.styl
+++ b/themes/quasar/source/css/page.styl
@@ -43,8 +43,6 @@
   padding-top 4rem
 
 #qwb-sidebar .qwb-accordion
-  opacity 0
-  transition opacity linear .2s
   border-top 1px solid rgba(0, 0, 0, .2)
 
 
@@ -53,6 +51,7 @@
 #qwb-page
   min-width $xs - 2rem
   max-width $lg
+  height 100%
   background-color $white
 
   .qwb-content
